--- a/layouts/Settings.json
+++ b/layouts/Settings.json
@@ -1,12 +1,12 @@
 {
-	"name": "Layout 1",
+	"name": "Settings",
 	"layers": [
 		{
 			"name": "Layer 0",
 			"overriden": 0,
 			"subLayers": [],
 			"instances": [],
-			"sid": 462161547164949,
+			"sid": 277419052842383,
 			"effectTypes": [],
 			"isInitiallyVisible": true,
 			"isInitiallyInteractive": true,
@@ -40,7 +40,7 @@
 		"items": [],
 		"subfolders": []
 	},
-	"sid": 694525356076102,
+	"sid": 727039919058514,
 	"nonworld-instances": [],
 	"effectTypes": [],
 	"width": 1708,
@@ -49,5 +49,5 @@
 	"vpX": 0.5,
 	"vpY": 0.5,
 	"projection": "perspective",
-	"eventSheet": "Event sheet 1"
+	"eventSheet": null
 }
